# i3-wsman

./: Cargo.toml  README.md  test-polybar.sh
.github/workflows/: rust.yml
examples/: i3-wsman.ini  i3-wsman.toml
src/: main.rs  state.rs
src/commands/: adjacent.rs  config.rs  get_workspaces.rs  goto.rs  group.rs  mod.rs  next.rs  poke.rs  polybar.rs  polybar_watch.rs  prev.rs  reorder.rs
src/commands/actions/: adjacent.rs  goto.rs  mod.rs  next.rs  prev.rs  reorder.rs
src/commands/cli/: get_workspaces.rs  group.rs  maintenance.rs  mod.rs  rename.rs
src/commands/polybar/: goto_workspace.rs  group.rs  help.rs  mod.rs  module_groups.rs  module_toggle_hidden.rs  module_workspaces.rs  poke.rs  set_group.rs  toggle_hidden.rs  watch.rs
src/common/: constraint.rs  groups.rs  mod.rs  moves.rs  name.rs  neighbor.rs  outputs.rs  polybar.rs  state.rs  tests.rs  workspaces.rs
src/common/config/: load.rs  mod.rs
src/common/constraint/: mod.rs  tests.rs
src/common/polybar/: defaults.rs  mod.rs
src/config/: global.rs  mod.rs  polybar.rs
src/config/global/: create.rs  focus.rs  groups.rs  mod.rs  startup.rs
src/config/global/navigation/: goto_behavior.rs  mod.rs  navigation_behavior.rs
src/config/polybar/: i3_wsman.rs  mod.rs  show_hidden_toggle.rs  styles.rs
src/groups/: mod.rs
src/i3/: mod.rs  outputs.rs  workspace.rs
src/polybar/: format.rs  label.rs  mod.rs
src/polybar/presets/: mod.rs  show_hidden_toggle.rs
