[package]
name = "i3-wsman"
version = "0.2.4"
edition = "2021"
license = "LGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = "3.0.2"
fs2 = "0.4.3"
i3_ipc = "^0.16.0"
lazy_static = "1.4.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "^1.0.104"
toml = "0.7.6"
xdg = "2.5.2"
